	- fix: %if parsing skipped 3 chars too many.
	- permit multiline macro expansions with comments and %if.
	- add pl translation and man pages (PLD team - from Tomasz Kloczko).
	- fix: incomplete cleanup if --rebuilddb fails (#4115).
	- add versions to provides.
	- fix: sanity test on specfile fails when encountering i18n chars.

3.0.1 -> 3.0.2
	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
	- permit multiple "Provides: " lines in rpmrc (#2999).
	- add BuildConflicts: and BuildRequires: in spec file and src rpm.
	- fix: bigendian's with longlong file sizes (e.g. IRIX) dinna work.
	- move printDep* routines into rpmlib for gnorpm et al.
	- updated ru translation (Sergey Kubushin).
	- add vpkg-provides.sh (Tim Mooney).
	- don't clobber LDFLAGS in top-level Makefile (Tim Mooney).
	- fix: build root from cmd line did not set macro %buildroot (#1026).
	- fix: resurrect "rpm -Va --nofiles" (verify dependencies only) (#3111).
	- rpm-devel should require popt (#3125).
	- don't spin while waiting for delayed requires/provides input (#3289).
	- common parse for all dependency token syntax.
	- eliminate find-requirements on libNoVersion (Red Hat linux only).
	- add new-fangled requires on "libc.so.6(GLIBC_2.1)" (sparc-linux only).
	- MiNT port (Guido Flohr <gufl0000@stud.uni-sb.de>).
	- fix: --rebuilddb with --root dinna remove directory (Michael Andres).
	- fix: false fingerprint stat cache hit -- "the tetex problem" (#2727).
	- fix: bsearch needs macro table sorted after undefine. (#3713).
	- fix: --checksig segfault with odd pgp output (e.g. w/o ~/.pgp) (#3720)
	- avoid numeric overflow in version comparison (Thayne Harbaugh<tharbaug@liberate.com>).
	- move url.c and ftp.c to rpmlib right next to query.
	- 12 more dead strtoks.
	- changelog stamp broken w/ big endian 64 bit time_t (Stephane Erania).
	- tru64: use /bin/sh not /usr/bin/ksh in find-requires.

3.0 -> 3.0.1
	- fix: %verifyscript resurrected (Shing-Gene Yung).